--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "html2canvas": "^1.0.0-rc.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-pdf": "^3.11.0",
+    "@react-pdf/renderer": "^1.6.8",
     "jspdf": "^1.5.3",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
@@ -14,8 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "npx babel-node scripts/generate-pdf.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,7 +38,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
-    "@babel/node": "^7.6.3",
-    "puppeteer": "^1.20.0"
+    "@babel/node": "^7.6.3"
   }
 }
