--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://anshulnautiyal.github.io/my-app",
+  "homepage": "https://anshulnautiyal.github.io/Resume/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
